--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -30,27 +30,28 @@ jobs:
       - name: Generate and Build with CMake
         shell: pwsh
         run: |
-          mkdir build
+          mkdir -p build
           cd build
           cmake ..
           cmake --build . --config Release
           ls
 
-      - name: Clean build directory
+      - name: Clean release directory
         shell: pwsh
         run: |
-          cd build
+          cd build/release
+          Rename-Item -Path "appRetr0Mine.exe" -NewName "Retr0Mine.exe"
           Get-ChildItem -Exclude Retr0Mine.exe | Remove-Item -Recurse -Force
 
       - name: Copy Steam API DLL
         shell: pwsh
         run: |
-          Copy-Item "lib\steam\win64\steam_api64.dll" -Destination "build\"
+          Copy-Item "lib\steam\win64\steam_api64.dll" -Destination "build\release\"
 
       - name: Deploy Qt
         shell: pwsh
         run: |
-          cd build
+          cd build\release
           $qmlDir = "D:\a\Retr0Mine\Retr0Mine\Resources\qml"
           windeployqt6 `
               --skip-plugin-types designer,iconengines,qmllint,generic,networkinformation,help,qmltooling,sqldrivers,tls,qmlls `
@@ -65,15 +66,15 @@ jobs:
       - name: Zip binaries folder
         shell: pwsh
         run: |
-          $zipFile = "Retr0Mine_msvc_64.zip"
-          $folder = "build"
+          $zipFile = "build/Retr0Mine_msvc_64.zip"
+          $folder = "build/release"
           Compress-Archive -Path $folder -DestinationPath $zipFile
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: Retr0Mine_msvc_64
-          path: Retr0Mine_msvc_64.zip
+          path: build/Retr0Mine_msvc_64.zip
 
       - name: Create Installer 
         shell: pwsh
@@ -119,6 +120,7 @@ jobs:
           cd build
           cmake ..
           cmake --build . --config Release
+          ls
 
       - name: Create AppDir structure
         run: |
@@ -126,9 +128,9 @@ jobs:
           mkdir -p AppDir/usr/lib
           mkdir -p AppDir/usr/share/applications
           mkdir -p AppDir/usr/share/icons/hicolor/256x256/apps
-          cp build/Retr0Mine AppDir/usr/bin/
+          mv build/appRetr0Mine AppDir/usr/bin/Retr0Mine
           
-          #cp lib/steam/linux64/libsteam_api.so AppDir/usr/lib/
+          #cp Dependencies/steam/lib/linux64/libsteam_api.so AppDir/usr/lib/
 
           # Create .desktop file
           cat > AppDir/usr/share/applications/Retr0Mine.desktop << EOF
@@ -142,7 +144,7 @@ jobs:
           EOF
           
           # Copy application icon
-          cp Resources/icons/icon.png AppDir/usr/share/icons/hicolor/256x256/apps/Retr0Mine.png
+          cp resources/icons/icon.png AppDir/usr/share/icons/hicolor/256x256/apps/Retr0Mine.png
 
       - name: Download linuxdeploy and plugins
         run: |
@@ -153,8 +155,8 @@ jobs:
       - name: Deploy with linuxdeploy
         run: |
           export QMAKE=$(which qmake6)
-          export QML_SOURCES_PATHS=${{ github.workspace }}/Resources/qml
-          export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$(pwd)/Dependencies/steam/lib/linux64
+          export QML_SOURCES_PATHS=${{ github.workspace }}/qml
+          export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$(pwd)/lib/steam/linux64
           export EXTRA_QT_MODULES="multimedia"
           ./linuxdeploy-x86_64.AppImage --appdir AppDir --plugin qt
 
@@ -189,27 +191,22 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        
       - name: Download Windows ZIP
         uses: actions/download-artifact@v4
         with:
           name: Retr0Mine_msvc_64
-          
       - name: Download Windows Installer
         uses: actions/download-artifact@v4
         with:
           name: Retr0Mine_Installer
           path: installer
-
       - name: Download Linux Build
         uses: actions/download-artifact@v4
         with:
           name: Retr0Mine_Linux
-
       - name: Download Steam Deck Installer Desktop File
         run: |
           wget https://raw.githubusercontent.com/Odizinne/Retr0Mine/main/Retr0Mine_SteamDeckInstaller.desktop
-
       - name: Bump version and create release
         id: bump_release
         run: |
@@ -234,7 +231,6 @@ jobs:
           git tag $NEW_TAG
           git push origin $NEW_TAG
           echo "new_tag=$NEW_TAG" >> $GITHUB_ENV
-
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
