--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,6 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_DISABLE_FIND_PACKAGE_WrapVulkanHeaders TRUE)
-
 find_package(Qt6 REQUIRED COMPONENTS
     Core
     Gui
@@ -15,11 +14,8 @@ find_package(Qt6 REQUIRED COMPONENTS
     QuickControls2
     LinguistTools
 )
-
 qt_standard_project_setup(REQUIRES 6.5)
-
 qt_policy(SET QTP0004 NEW)
-
 set(SOURCES
     src/main.cpp
     src/gametimer.cpp
@@ -27,14 +23,12 @@ set(SOURCES
     src/gamelogic.cpp
     src/steamintegration.cpp
 )
-
 set(HEADERS
     include/gametimer.h
     include/gamecore.h
     include/gamelogic.h
     include/steamintegration.h
 )
-
 set(QML_FILES
     qml/Cell.qml
     qml/SettingsPage.qml
@@ -53,19 +47,16 @@ set(QML_FILES
     qml/GameAudio.qml
     qml/GameView.qml
 )
-
 set(QML_SINGLETONS
     qml/GameSettings.qml
     qml/GameConstants.qml
     qml/GameState.qml
     qml/SaveManager.qml
 )
-
 set_source_files_properties(${QML_SINGLETONS}
     PROPERTIES QT_QML_SINGLETON_TYPE TRUE
 )
-
-add_executable(appRetr0Mine
+add_executable(${CMAKE_PROJECT_NAME}
     ${SOURCES}
     ${HEADERS}
     resources/icons/icons.qrc
@@ -74,19 +65,16 @@ add_executable(appRetr0Mine
     resources/fonts/fonts.qrc
     resources/appicon.rc
 )
-
-qt_add_qml_module(appRetr0Mine
-    URI Retr0Mine
+qt_add_qml_module(${CMAKE_PROJECT_NAME}
+    URI net.odizinne.retr0mine
     VERSION 1.0
     QML_FILES ${QML_FILES} ${QML_SINGLETONS}
 )
-
-target_include_directories(appRetr0Mine PRIVATE
+target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/include
     ${CMAKE_CURRENT_SOURCE_DIR}/include/steam
 )
-
-target_link_libraries(appRetr0Mine PRIVATE
+target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE
     Qt6::Core
     Qt6::Gui
     Qt6::Qml
@@ -94,31 +82,28 @@ target_link_libraries(appRetr0Mine PRIVATE
     Qt6::Multimedia
     Qt6::QuickControls2
 )
-
-qt_add_translations(appRetr0Mine
+qt_add_translations(${CMAKE_PROJECT_NAME}
     TS_FILES
         translations/retr0mine_en.ts
         translations/retr0mine_fr.ts
     RESOURCE_PREFIX "/translations"
 )
-
-#add_dependencies(appRetr0Mine update_translations)
-
+#add_dependencies(${CMAKE_PROJECT_NAME} update_translations)
 if(WIN32)
-    target_compile_definitions(appRetr0Mine PRIVATE
+    target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE
         *CRT*SECURE_NO_WARNINGS
     )
-    target_compile_options(appRetr0Mine PRIVATE
+    target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE
         /wd4828
     )
-    target_link_libraries(appRetr0Mine PRIVATE
+    target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE
         ${CMAKE_CURRENT_SOURCE_DIR}/lib/steam/win64/steam_api64.lib
     )
-    set_target_properties(appRetr0Mine PROPERTIES
+    set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES
         WIN32_EXECUTABLE TRUE
     )
 elseif(UNIX AND NOT APPLE)
-    target_link_libraries(appRetr0Mine PRIVATE
+    target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE
         ${CMAKE_CURRENT_SOURCE_DIR}/lib/steam/linux64/libsteam_api.so
     )
 endif()
