--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,6 +103,7 @@ qt_add_translations(${CMAKE_PROJECT_NAME}
         i18n/Retr0Mine_en.ts
         i18n/Retr0Mine_fr.ts
     RESOURCE_PREFIX "/i18n"
+    LUPDATE_OPTIONS "-no-obsolete"
 )
 add_dependencies(${CMAKE_PROJECT_NAME} update_translations)
 if(WIN32)
