added popup on invite received

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,7 @@ set(QML_FILES
     qml/Popups/PausePopup.qml
     qml/Popups/MultiplayerPopup.qml
     qml/Popups/MultiplayerErrorPopup.qml
+    qml/Popups/InviteReceivedPopup.qml
 )
 set(QML_SINGLETONS
     qml/Singletons/GameSettings.qml
@@ -113,7 +114,7 @@ qt_add_translations(${CMAKE_PROJECT_NAME}
     RESOURCE_PREFIX "/i18n"
     LUPDATE_OPTIONS "-no-obsolete"
 )
-#add_dependencies(${CMAKE_PROJECT_NAME} update_translations)
+add_dependencies(${CMAKE_PROJECT_NAME} update_translations)
 if(WIN32)
     target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE
         *CRT*SECURE_NO_WARNINGS
