cleaned up solver, added autoplayer for debug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,8 @@ set(QML_SINGLETONS
     qml/Singletons/GridBridge.qml
     qml/Singletons/ComponentsContext.qml
     qml/Singletons/NetworkManager.qml
+    qml/Singletons/AutoplayManager.qml
+
 )
 set_source_files_properties(${QML_SINGLETONS}
     PROPERTIES QT_QML_SINGLETON_TYPE TRUE
