--- a/.github/workflows/steam-builds.yml
+++ b/.github/workflows/steam-builds.yml
@@ -33,40 +33,42 @@ jobs:
           mkdir -p build
           cd build
           cmake ..
-          cmake --build . --config Release --parallel
-          ls
+          cmake --build . --config Release 
+          cmake --install . --config Release
+          ls net/odizinne/retr0mine
+          ls install
           
-      - name: Clean build directory
-        shell: pwsh
-        run: |
-          cd build/release
-          Get-ChildItem -Exclude Retr0Mine.exe | Remove-Item -Recurse -Force
-
-      - name: Copy Steam API DLL
-        shell: pwsh
-        run: |
-          Copy-Item "lib\steam\win64\steam_api64.dll" -Destination "build\release"
-
-      - name: Deploy Qt
-        shell: pwsh
-        run: |
-          cd build/release
-          $qmlDir = "D:\a\Retr0Mine\Retr0Mine\qml"
-          windeployqt6 `
-              --skip-plugin-types designer,iconengines,qmllint,generic,networkinformation,help,qmltooling,sqldrivers,tls,qmlls `
-              --no-opengl-sw `
-              --no-system-dxc-compiler `
-              --no-compiler-runtime `
-              --no-translations `
-              --no-system-d3d-compiler `
-              --qmldir $qmlDir `
-              Retr0Mine.exe
+#      - name: Clean build directory
+#        shell: pwsh
+#        run: |
+#          cd build/release
+#          Get-ChildItem -Exclude Retr0Mine.exe | Remove-Item -Recurse -Force
+#
+#      - name: Copy Steam API DLL
+#        shell: pwsh
+#        run: |
+#          Copy-Item "lib\steam\win64\steam_api64.dll" -Destination "build\release"
+#
+#      - name: Deploy Qt
+#        shell: pwsh
+#        run: |
+#          cd build/release
+#          $qmlDir = "D:\a\Retr0Mine\Retr0Mine\qml"
+#          windeployqt6 `
+#              --skip-plugin-types designer,iconengines,qmllint,generic,networkinformation,help,qmltooling,sqldrivers,tls,qmlls `
+#              --no-opengl-sw `
+#              --no-system-dxc-compiler `
+#              --no-compiler-runtime `
+#              --no-translations `
+#              --no-system-d3d-compiler `
+#              --qmldir $qmlDir `
+#              Retr0Mine.exe
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: Retr0Mine_Windows
-          path: build/release
+          path: build/install
 
   linux-build:
     runs-on: ubuntu-latest
