--- a/.github/workflows/steam-builds.yml
+++ b/.github/workflows/steam-builds.yml
@@ -77,9 +77,23 @@ jobs:
           cmake --install . --config Release
           ls
           ls install
+          
+      - name: Cleanup Libraries and Plugins
+        shell: bash
+        run: |
+          # Cleanup plugins
+          echo "Cleaning up unnecessary plugin folders..."
+          cd build/install/plugins
+          if [ -d "." ]; then
+            echo "Removing specified plugin folders..."
+            rm -rf iconengines imageformats networkinformation qmltooling tls
+          else
+            echo "Plugins directory not found, skipping plugin cleanup"
+          fi
 
       - name: Upload Build
-        uses: actions/upload-artifact@v4
+        uses: eXhumer/upload-artifact@0b7d5f5684d3f642f978d2faad9ade64f5b4dd57
         with:
           name: Retr0Mine_Linux
           path: build/install
+          follow-symlinks: false
